--- a/index.html
+++ b/index.html
@@ -4,35 +4,38 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="widht=device-content, initial-scale=1"/>
     <title>Technical documentation</title>
-    <link rel="sheetstyle" href="/css/style.css"/>
+    <link rel="sheetstyle" href="./assets/css/main.css"/>
   </head>
   
   <body>
     <nav id="nav-bar">
-
+      
     </nav>
 
-    <main id="main-doc">
-      <div class="main-section">
+  <!-- пройтись после разработки навигации
+    
+    <main id="main__doc">
+      <section class="main__section">
         <header></header>
         <article></article>
-      </div>
-      <div class="main-section">
+      </section>
+      <section class="main__section">
         <header></header>
         <article></article>
-      </div>
-      <div class="main-section">
+      </section>
+      <section class="main__section">
         <header></header>
         <article></article>
-      </div>
-      <div class="main-section">
+      </section>
+      <section class="main__section">
         <header></header>
         <article></article>
-      </div>
-      <div class="main-section">
+      </section>
+      <section class="main__section">
         <header></header>
         <article></article>
-      </div>
+      </section>
     </main>
+  -->
   </body>
 </html>
