--- a/index.html
+++ b/index.html
@@ -2,40 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="widht=device-content, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Technical documentation</title>
-    <link rel="sheetstyle" href="./assets/css/main.css"/>
+    <link rel="stylesheet" href="../assets/css/main.css"/>
   </head>
   
   <body>
     <nav id="nav-bar">
-      
+      <a href="/">приветики</a>
     </nav>
-
-  <!-- пройтись после разработки навигации
-    
-    <main id="main__doc">
-      <section class="main__section">
-        <header></header>
-        <article></article>
-      </section>
-      <section class="main__section">
-        <header></header>
-        <article></article>
-      </section>
-      <section class="main__section">
-        <header></header>
-        <article></article>
-      </section>
-      <section class="main__section">
-        <header></header>
-        <article></article>
-      </section>
-      <section class="main__section">
-        <header></header>
-        <article></article>
-      </section>
-    </main>
-  -->
   </body>
 </html>
