--- a/index.html
+++ b/index.html
@@ -249,6 +249,6 @@
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="/assets/js/menu.js"></script>
+    <script src="./assets/js/menu.js"></script>
   </body>
 </html>
