fix anchor 'if_else_stateent'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="nav__item"><a href="#Global_variables" class="nav__link">Global variables</a></li>
         <li class="nav__item"><a href="#Constants" class="nav__link">Constants</a></li>
         <li class="nav__item"><a href="#Data_types" class="nav__link">Data types</a></li>
-        <li class="nav__item"><a href="#if...else_statement" class="nav__link">if...else statement</a></li>
+        <li class="nav__item"><a href="#if_else_statement" class="nav__link">if...else statement</a></li>
         <li class="nav__item"><a href="#while_statement" class="nav__link">while statement</a></li>
         <li class="nav__item"><a href="#Function_declarations" class="nav__link">Function declarations</a></li>
         <li class="nav__item"><a href="#Reference" class="nav__link">Reference</a></li>
@@ -170,7 +170,7 @@
           </p>
         </article>
       </section>
-      <section class="main-section" id="if...else_statement">
+      <section class="main-section" id="if_else_statement">
         <header>if...else_statement</header>
         <article>
           <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
